--- a/QuanLyBanDienThoai/QuanLyBanDienThoai.csproj
+++ b/QuanLyBanDienThoai/QuanLyBanDienThoai.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Data\Taikhoan.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
