--- a/QuanLyBanDienThoai/QuanLyBanDienThoai.csproj
+++ b/QuanLyBanDienThoai/QuanLyBanDienThoai.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <None Update="Data\Taikhoan.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
